# Copyright (C) 2005-2010 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates/before_upgrade_to_0.13

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	032_7059_01_characters.sql \
	041_7932_01_characters_character_pet.sql \
	045_8098_01_characters_character_action.sql \
	045_8098_03_characters_character_pet.sql \
	045_8098_04_characters_pet_spell.sql \
	052_8072_01_characters_characters.sql \
	061_7067_03_characters_character_spell.sql \
	066_8402_01_characters_guild_eventlog.sql \
	066_8402_02_characters_guild_bank_eventlog.sql \
	066_8409_01_characters_guild.sql \
	091_9339_01_characters_group.sql \
	097_9611_01_characters.sql \
	102_9687_01_characters_character_queststatus_daily.sql \
	105_9680_01_characters_character_stats.sql \
	111_9767_03_characters_characters.sql \
	112_8874_01_characters_character_skills.sql \
	114_9849_01_characters_saved_variables.sql \
	s0041_10254_01_characters_auctionhouse.sql \
	s0087_10312_01_characters_character_aura.sql \
	s0087_10312_02_characters_pet_aura.sql \
	s0099_10332_01_characters_character_aura.sql \
	s0099_10332_02_characters_pet_aura.sql \
	s0114_09136_01_characters_character_ticket.sql \
	s0201_7255_01_characters_characters.sql \
	s0216_7307_01_characters_arena_team_member.sql \
	s0224_10503_01_characters_creature_respawn.sql \
	s0224_10503_02_characters_gameobject_respawn.sql \
	s0224_10503_03_mangos_creature_respawn.sql \
	s0224_10503_04_mangos_gameobject_respawn.sql \
	s0384_10664_01_characters_arena_team_stats.sql \
	s0386_10662_01_characters_item_loot.sql \
	s0507_8339_01_characters_characters.sql \
	s0507_8339_02_characters_character_battleground_data.sql \
	s0531_8596_01_characters_bugreport.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	032_7059_01_characters.sql \
	041_7932_01_characters_character_pet.sql \
	045_8098_01_characters_character_action.sql \
	045_8098_03_characters_character_pet.sql \
	045_8098_04_characters_pet_spell.sql \
	052_8072_01_characters_characters.sql \
	061_7067_03_characters_character_spell.sql \
	066_8402_01_characters_guild_eventlog.sql \
	066_8402_02_characters_guild_bank_eventlog.sql \
	066_8409_01_characters_guild.sql \
	091_9339_01_characters_group.sql \
	097_9611_01_characters.sql \
	102_9687_01_characters_character_queststatus_daily.sql \
	105_9680_01_characters_character_stats.sql \
	111_9767_03_characters_characters.sql \
	112_8874_01_characters_character_skills.sql \
	114_9849_01_characters_saved_variables.sql \
	s0041_10254_01_characters_auctionhouse.sql \
	s0087_10312_01_characters_character_aura.sql \
	s0087_10312_02_characters_pet_aura.sql \
	s0099_10332_01_characters_character_aura.sql \
	s0099_10332_02_characters_pet_aura.sql \
	s0114_09136_01_characters_character_ticket.sql \
	s0201_7255_01_characters_characters.sql \
	s0216_7307_01_characters_arena_team_member.sql \
	s0224_10503_01_characters_creature_respawn.sql \
	s0224_10503_02_characters_gameobject_respawn.sql \
	s0224_10503_03_mangos_creature_respawn.sql \
	s0224_10503_04_mangos_gameobject_respawn.sql \
	s0384_10664_01_characters_arena_team_stats.sql \
	s0386_10662_01_characters_item_loot.sql \
	s0507_8339_01_characters_characters.sql \
	s0507_8339_02_characters_character_battleground_data.sql \
	s0531_8596_01_characters_bugreport.sql \
	README
